# qt_exp

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  combined.qrc  hello.qml  hello.qrc  hello_main.cc  hello_qml_main.cc  hello_qt_main.cc  hello_quickview.qml  hello_quickview.qrc  hello_quickview_main.cc  run_rcc.sh  setup_qt.sh
qt_generated/: BUILD.bazel
