load("@buildifier_prebuilt//:rules.bzl", "buildifier")

package(default_visibility = ["//visibility:public"])

# bazel run //:buildifier
# .. or warn
buildifier(
    name = "buildifier",
    exclude_patterns = [
        "./bazel-*/*",
        "./.git/*",
    ],
    lint_mode = "fix",
)

cc_library(
    name = "qt",
    hdrs = glob(["third_party/qt/include/**/*.h"]),
    linkopts = [
        "-lQt6Charts",
        "-lQt6Widgets",
        "-lQt6Core",
        "-lQt6Gui",
        "-lQt6Quick",
        "-lQt6Qml",
        "-Ithird_party/qt/qml"
    ],
)

# The reason for copts = ["-I/usr/include/x86_64-linux-gnu/qt6"].
# It should be in cc_binary or in .bazelrc
# because QT include convention has includes with angle brackets and
# relative hdrs attributes in libraries cannot resolve these headers.
# This won't work for /usr/local, home directory or symlinks.
# Moving copts to qt library won't work.
cc_binary(
    name = "hello_main",
    srcs = [":hello_main.cc"],
    deps = [
        ":qt",
        "@gflags",
        "@glog",
    ],
)

cc_binary(
    name = "hello_qml_main",
    srcs = [
        "//qt_generated",
        "hello_qml_main.cc",
    ],
    data = ["hello.qml"],
    deps = [
        ":qt",
        "@gflags",
        "@glog",
    ],
)

cc_binary(
    name = "hello_quickview_main",
    srcs = ["hello_quickview_main.cc"],
    data = ["hello_quickview.qml"],
    deps = ["@glog", "@gflags", ":qt"],
)
